# OcrManga

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_client.py  web_interface.html
